[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "muonline-packet"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = { version = "1.0", optional = true }
byteorder = "1.2"
lazy_static = "1.0"
serde = { version = "1.0", optional = true }
smallvec = "0.6"
bytes = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
tokio-io = { version = "0.1", optional = true }
packet-derive = { version = "0.1", optional = true, path = "./packet-derive" }

[features]
serialize = ["serde", "bincode", "packet-derive"]
codec = ["bytes", "log", "tokio-io"]
