[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "muonline-packet"
version = "0.1.0"

[dependencies]
byteorder = "1.2"
lazy_static = "1.0"
smallvec = "0.6"

[dependencies.bincode]
optional = true
version = "1.0"

[dependencies.serde]
optional = true
version = "1.0"

[features]
serialize = ["serde", "bincode"]
