[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
name = "muonline-packet_derive"
version = "0.1.0"

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"

[dev-dependencies.muonline-packet]
path = "../muonline-packet"
features = ["serialize"]

[lib]
proc-macro = true
